--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 PORT=8080
 
 # API Authentication (for communication between ESP32 and Server)
-HTTP_USERNAME=admin
-HTTP_PASSWORD=admin
+HTTP_USERNAME=joshipa
+HTTP_PASSWORD=@18
 
 # OpenRouter Configuration (Primary AI Provider)
 OPENROUTER_API_KEY=your_openrouter_key_here
@@ -16,11 +16,11 @@ IMAGE_OPENROUTER_API_KEY=your_openrouter_key_here
 IMAGE_AI_MODEL=google/gemini-2.0-flash-exp:free
 
 # Chat Configuration
-CHAT_NAME=STUDENT_1
+CHAT_NAME=ai-84
 
 # WiFi Credentials (Fallback for ESP32)
-WIFI_SSID=Your_SSID
-WIFI_PASS=Your_Password
+WIFI_SSID=Moonlight2.5
+WIFI_PASS=gfhgghghh
 
 # Ngrok Configuration (Optional)
-NGROK_AUTHTOKEN=your_ngrok_token_here
+NGROK_AUTHTOKEN=lawere.dev
